<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alise.quizapp.MainActivity">

    <LinearLayout
        style="@style/width_height"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/TextView"
            android:text="@string/name_question" />

        <EditText
            android:id="@+id/name_answer"
            style="@style/EditText"
            android:layout_marginBottom="34dp"
            android:hint="@string/name_hint" />

        <TextView
            style="@style/TextView"
            android:text="@string/scroll_question" />

        <RadioGroup
            android:id="@+id/scrollview_answer"
            style="@style/width_height"
            android:layout_marginBottom="34dp">

            <RadioButton
                android:id="@+id/scroll_view"
                style="@style/width_height"
                android:text="@string/scroll_view" />

            <RadioButton
                android:id="@+id/linear_view"
                style="@style/width_height"
                android:text="@string/linear_layout" />

            <RadioButton
                android:id="@+id/check_box"
                style="@style/width_height"
                android:text="@string/check_box" />

            <RadioButton
                android:id="@+id/text_view"
                style="@style/width_height"
                android:text="@string/text_view" />

        </RadioGroup>

        <TextView
            style="@style/TextView"
            android:text="@string/android_question" />

        <EditText
            android:id="@+id/android_answer"
            style="@style/EditText"
            android:layout_marginBottom="34dp"
            android:hint="@string/android_hint" />

        <TextView
            style="@style/TextView"
            android:text="@string/primitives_question" />

        <CheckBox
            android:id="@+id/primitives_answer1"
            style="@style/width_height"
            android:text="@string/int__primitive" />

        <CheckBox
            android:id="@+id/primitives_answer2"
            style="@style/width_height"
            android:text="@string/string" />

        <CheckBox
            android:id="@+id/primitives_answer3"
            style="@style/width_height"
            android:text="@string/long_primitive" />

        <CheckBox
            android:id="@+id/primitives_answer4"
            style="@style/width_height"
            android:text="@string/text_view" />

        <CheckBox
            android:id="@+id/primitives_answer5"
            style="@style/width_height"
            android:layout_marginBottom="34dp"
            android:text="@string/boolean_primitive" />


        <TextView
            style="@style/TextView"
            android:text="@string/color_question" />

        <RadioGroup
            android:id="@+id/color_answer"
            style="@style/width_height"
            android:layout_marginBottom="34dp">

            <RadioButton
                android:id="@+id/red"
                style="@style/width_height"
                android:text="@string/hex_red" />

            <RadioButton
                android:id="@+id/blue"
                style="@style/width_height"
                android:text="@string/hex_blue" />

            <RadioButton
                android:id="@+id/green"
                style="@style/width_height"
                android:text="@string/hex_green" />

            <RadioButton
                android:id="@+id/brown"
                style="@style/width_height"
                android:text="@string/hex_brown" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            style="@style/width_height"
            android:padding="16dp"
            android:text="@string/submit_button"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
